cmake_minimum_required(VERSION 3.26)
project(levelontests)

set(CMAKE_CXX_STANDARD 23)

add_executable(levelontests TaskOne.cpp
        TaskTwo.cpp
        TaskThree.cpp
        TaskFour.cpp
        TaskFive.cpp
        TaskSix.cpp
        TaskSeven.cpp
        TaskEight.cpp
        TaskNine.cpp
        TaskTen.cpp)
